@@ -1,0 +1,1 @@
+.c6xabi_attribute 1024, 1
